Jakarta EE 9 version
Signed-off-by: Ivar Grimstad <ivar.grimstad@eclipse-foundation.org>

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     </licenses>
 
     <modules>
+        <module>complete-duke</module>
         <module>rest-duke</module>
         <module>servlet-duke</module>
     </modules>
