--- a/servlet-duke/pom.xml
+++ b/servlet-duke/pom.xml
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>jakarta.platform</groupId>
             <artifactId>jakarta.jakartaee-api</artifactId>
-            <version>9.0.0-RC2</version>
+            <version>9.0.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
