--- a/complete-duke/pom.xml
+++ b/complete-duke/pom.xml
@@ -16,11 +16,18 @@
     </licenses>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+<!--        <maven.compiler.source>17</maven.compiler.source>-->
+<!--        <maven.compiler.target>17</maven.compiler.target>-->
+        <maven.compiler.release>17</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <failOnMissingWebXml>false</failOnMissingWebXml>
     </properties>
+
+    <parent>
+        <groupId>eu.agilejava</groupId>
+        <artifactId>jakartaee-duke</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
 
     <build>
         <finalName>complete-duke</finalName>
@@ -30,7 +37,7 @@
         <dependency>
             <groupId>jakarta.platform</groupId>
             <artifactId>jakarta.jakartaee-api</artifactId>
-            <version>8.0.0</version>
+            <version>9.1.0</version>
             <scope>provided</scope>
         </dependency>
 
