--- a/transformer-duke/pom.xml
+++ b/transformer-duke/pom.xml
@@ -15,23 +15,14 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
     </properties>
 
+    <parent>
+        <groupId>eu.agilejava</groupId>
+        <artifactId>jakartaee-duke</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
+
     <build>
         <finalName>transformer-duke</finalName>
-
-        <plugins>
-            <plugin>
-                <groupId>org.eclipse.transformer</groupId>
-                <artifactId>org.eclipse.transformer.maven</artifactId>
-                <version>0.2.0</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
     </build>
 
     <dependencies>
