--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,6 +20,6 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: '17'
-        distribution: 'tem'
+        distribution: 'temurin'
     - name: Build with Maven
       run: mvn -B package --file pom.xml
