--- a/core-duke/pom.xml
+++ b/core-duke/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>core-duke</artifactId>
     <name>Core Duke</name>
     <version>1.0.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <licenses>
         <license>
@@ -16,9 +16,7 @@
     </licenses>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-<!--        <maven.compiler.release>17</maven.compiler.release>-->
+        <maven.compiler.release>17</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <failOnMissingWebXml>false</failOnMissingWebXml>
     </properties>
@@ -30,14 +28,14 @@
     </parent>
 
     <build>
-        <finalName>complete-duke</finalName>
+        <finalName>core-duke</finalName>
     </build>
 
     <dependencies>
         <dependency>
             <groupId>jakarta.platform</groupId>
-            <artifactId>jakarta.jakartaee-api</artifactId>
-            <version>8.0.0</version>
+            <artifactId>jakarta.jakartaee-core-api</artifactId>
+            <version>10.0.0</version>
             <scope>provided</scope>
         </dependency>
 
