--- a/booty-duke/pom.xml
+++ b/booty-duke/pom.xml
@@ -60,26 +60,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>jakarta.ws.rs</groupId>
-            <artifactId>jakarta.ws.rs-api</artifactId>
-            <version>3.1.0</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
             <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-core</artifactId>
-            <version>6.1.0.Beta2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-undertow</artifactId>
-            <version>6.1.0.Beta2</version>
+            <artifactId>resteasy-undertow-cdi</artifactId>
+            <version>6.1.0.Beta3</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-json-binding-provider</artifactId>
-            <version>6.1.0.Beta2</version>
+            <version>6.1.0.Beta3</version>
         </dependency>
     </dependencies>
 
